Complete Authentication UI

--- a/work3/West2onlineFrontEnd/tsconfig.app.json
+++ b/work3/West2onlineFrontEnd/tsconfig.app.json
@@ -5,9 +5,10 @@
   "compilerOptions": {
     "composite": true,
     "noEmit": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@": ["./src"],
+      "@/*": ["./src/*"],
     }
   }
 }
