--- a/work3/West2onlineFrontEnd/package.json
+++ b/work3/West2onlineFrontEnd/package.json
@@ -24,7 +24,8 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.19.3",
+    "@types/node": "^18.19.4",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -37,6 +38,7 @@
     "typescript": "~5.3.0",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
+    "uuid": "^9.0.1",
     "vite": "^5.0.10",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.25"
