--- a/work3/xhhing/package.json
+++ b/work3/xhhing/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "element-plus": "^2.5.2",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
