--- a/work3/y952009389/my-vue-app/package.json
+++ b/work3/y952009389/my-vue-app/package.json
@@ -20,6 +20,7 @@
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.25"
   }
 }
