--- a/work3/y952009389/my-vue-app/package.json
+++ b/work3/y952009389/my-vue-app/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@types/node": "^20.10.5",
+    "axios": "^1.6.7",
     "element-plus": "^2.4.4",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
