--- a/work4/work4/package.json
+++ b/work4/work4/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "element-plus": "^2.5.5",
+    "markdown-it": "^14.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
