--- a/work5/Kotrice/ui-library/package.json
+++ b/work5/Kotrice/ui-library/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-library",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
